notifications: Add support for playing sound via hints

This allows applications to add sounds to their notifications by setting the appropriate hints

BUG: 472037